{
    "name": "BasicPlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "d7cafebe-dea4-4749-bfc2-a80075dfb165",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "944c86cd-37db-40e1-a114-e55a7b5f01a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "31fc8a84-6e3d-4add-9404-f65f4612bd4c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7cfadf05-c1fd-47e1-ba1c-f977c88e7f1b",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ad2a3b1a-3bc7-483c-9778-bff96c12e54c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "140ff4be-17e0-4361-9345-4f8c4640575a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2df28a70-af94-42be-8882-5b1c562f3684",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "abac1230-ad1d-4dcb-a0a0-fa98147ef59f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "268de964-6abe-402c-bd17-e97dfbf30074",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Actions",
            "id": "bc151d8d-c5db-433a-8841-1cedc6c75ddc",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fce9f11b-f098-4175-ae9a-79366719dd1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "SuperJump",
                    "type": "Button",
                    "id": "7e9dea17-e489-447e-b5d3-d03719d8e5bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkingToggle",
                    "type": "Button",
                    "id": "1872022a-8540-4a84-befb-68b289e2b623",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "7d22c5bf-3b6e-4e94-93b4-52056c5804fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6589de3-4eed-46ef-92a0-db326254a08a",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6392779e-999e-4aa9-85c0-983d96a6bda1",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "SuperJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ec03241-5622-43f2-acf8-55e5c254a561",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "WalkingToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9af41094-0b3f-4ed0-9b63-87f6d7f88eec",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}